--- a/src/components/Disclaimer.css
+++ b/src/components/Disclaimer.css
@@ -1,5 +1,5 @@
 .disclaimer {
-  margin: 0 auto;
+  margin: 0 auto 60px;
   text-align: center;
   max-width: 500px;
   padding: 24px;
